--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -15,7 +15,7 @@
     <tbody>
     {% for movie in movies %}
     <tr>
-        <td>{{movie.title}}</td>
+        <td><a href="{% url 'movies:detail' movie.id %}">{{movie.title}}</a></td>
         <td>{{movie.release_year}}</td>
         <td>{{movie.genre}}</td>
         <td>{{movie.number_in_stock}}</td>
