added movie detail view

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{%url 'movies:index' %}">Vidly 🎥</a>
+        <a class="navbar-brand" href="{%url 'home' %}">Vidly 🎥</a>
     </div>
 </nav>
 <main class="container">
